# mori

./: DOCUMENTATION_AUDIT_REPORT.html  MORI-EP-BENCHMARK.html  MORI-EP-GUIDE.html  MORI-IO-BENCHMARK.html  MORI-IO-GUIDE.html  MORI-IO-INTRO.html  MORI-IR-GUIDE.html  MORI-SHMEM-GUIDE.html  MORI_IR_INTEGRATION.html  MORI_JIT_ARCHITECTURE.html  PROFILER.html  README.md  genindex.html  index.html  installation.html  objects.inv  quickstart.html  search.html  searchindex.js
.github/workflows/: docs.yml  sync-upstream.yaml
_sources/: DOCUMENTATION_AUDIT_REPORT.md.txt  MORI-EP-GUIDE.md.txt  MORI-IO-BENCHMARK.md.txt  MORI-IO-GUIDE.md.txt  MORI-IO-INTRO.md.txt  MORI-SHMEM-GUIDE.md.txt  PROFILER.md.txt  index.rst.txt  installation.rst.txt  quickstart.rst.txt
api/: communication.html  profiler.html
docs/: MORI-EP-BENCHMARK.md  MORI-EP-GUIDE.md  MORI-SHMEM-GUIDE.md  Makefile  conf.py  index.rst  installation.rst  quickstart.rst  requirements.txt
docs/api/: communication.rst  profiler.rst
examples/ops/dispatch_combine/: test_dispatch_combine.py  test_dispatch_combine_internode.py  test_low_latency.py
include/mori/ops/: cast.hpp  ops.hpp
include/mori/utils/: data_types.hpp  hip_helper.hpp
python/mori/ops/: dispatch_combine.py  ops.py
src/ops/: CMakeLists.txt  cast.cpp
src/ops/dispatch_combine/: dispatch_combine.cpp  internode_v1.cpp  intranode.hpp  low_latency_async.cpp  low_latency_async.hpp
src/pybind/: mori.cpp  torch_utils.hpp
tests/python/: utils.py
tests/python/ops/: bench_dispatch_combine.py  test_dispatch_combine.py  (+1 more)
tools/: intranode_tuning.sh
(+8 files in other folders)
